...
                                <state key="normal" title="Button" image="Biography.png"/>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mhr-hB-pRZ">
                                <rect key="frame" x="92" y="245" width="55" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                <state key="normal" title="Biography"/>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LYq-OU-pCC">
                                <rect key="frame" x="173" y="214" width="32" height="33"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Button" image="Kids.png"/>
                            </button>
...
                            </searchBar>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="52K-gL-nDR">
                                <rect key="frame" x="261" y="140" width="75" height="44"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.67940117799999999" green="0.67940117799999999" blue="0.67940117799999999" alpha="1" colorSpace="calibratedRGB"/>
                                <color key="tintColor" red="0.18750238229999999" green="0.1871539566" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Search"/>
                                <connections>
                                    <segue destination="lOg-BI-hQK" kind="modal" id="UUh-AG-ybY"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M1L-ri-LJ5">
                                <rect key="frame" x="16" y="617" width="73" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Go back"/>
                                <connections>
                                    <action selector="backButtonTouched:" destination="O9G-Dg-Thz" eventType="touchUpInside" id="3TG-Mi-VB0"/>
                                    <action selector="backButtonTouched:" destination="lOg-BI-hQK" eventType="touchUpInside" id="gJg-et-u1e"/>
                                </connections>
                            </button>
                        </subviews>
...
            </objects>
            <point key="canvasLocation" x="347.5" y="1375.5"/>
        </scene>
        <!--Sign up-->
        <scene sceneID="JZr-Kt-27j">
            <objects>
                <viewController title="Sign up" id="JMv-gc-WRY" customClass="SignUp" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="FEK-EA-oyb"/>
                        <viewControllerLayoutGuide type="bottom" id="bsv-0a-Enr"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="ohe-kk-Jx2">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3BO-JR-bwG">
                                <rect key="frame" x="263" y="588" width="58" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Go Back">
                                    <color key="titleColor" red="0.18750238229999999" green="0.1871539566" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="backButtonTouched:" destination="JMv-gc-WRY" eventType="touchUpInside" id="occ-ci-BzZ"/>
                                </connections>
                            </button>
...
