//
//  myTest.m
//  OneMan‘s Treasure
//
//  Created by 龚梦晨 on 4/6/17.
//  Copyright © 2017 龚梦晨. All rights reserved.
//

#import <XCTest/XCTest.h>
//#import <KIF/KIF.h>
//#import "KIF.h"
@interface myTest : XCTestCase

@end

@implementation myTest

- (void)setUp {
    [super setUp];
    
    // Put setup code here. This method is called before the invocation of each test method in the class.
    
    // In UI tests it is usually best to stop immediately when a failure occurs.
    self.continueAfterFailure = NO;
    // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
    [[[XCUIApplication alloc] init] launch];

    // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
}

- (void)tearDown {
    // Put teardown code here. This method is called after the invocation of each test method in the class.
    [super tearDown];
}

- (void)testExample {
    
    XCUIApplication *app = [[XCUIApplication alloc] init];
    XCUIElement *window = [[app childrenMatchingType:XCUIElementTypeWindow] elementBoundByIndex:0];
    [[[[[[[window childrenMatchingType:XCUIElementTypeOther] elementBoundByIndex:10] childrenMatchingType:XCUIElementTypeOther].element childrenMatchingType:XCUIElementTypeButton] matchingIdentifier:@"Button"] elementBoundByIndex:0] tap];
    [app.buttons[@"Biography"] tap];
    [app.buttons[@"Search"] tap];
    [[[window childrenMatchingType:XCUIElementTypeOther] elementBoundByIndex:11] tap];
    [app.buttons[@"Go back"] tap];
    [app.buttons[@"Log in"] tap];
    [app.buttons[@"Sign up"] tap];
    [app.buttons[@"Go Back"] tap];
    // Use recording to get started writing UI tests.
    // Use XCTAssert and related functions to verify your tests produce the correct results.
}


@end
